syntax = "proto3";

package auth;
option go_package = "./;auth";

import "google/protobuf/timestamp.proto";


// generating grpc go code: protoc --go-grpc_out=. --go-grpc_opt=paths=source_relative auth.proto
// generating proto go structs: protoc -I proto --go_out=proto --go_opt=paths=source_relative  auth.proto

service AuthService {
    rpc VerifyUser(Token) returns (AuthResponse);
}

message Token {
    string Token = 1;
}

message AuthResponse {
    string Message = 1;
    User user = 2;

}

message User {
    int64 Id = 1;
    string Iin = 2;
    string Login = 3;
    Role Role = 4;
    google.protobuf.Timestamp CreatedAt = 5;
}

message Role {
    int64 Id = 1;
    string Name = 2;
}